<resources>
    <string name="app_name">DINT_Database_Task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">Nombre</string>
    <string name="surname">Primer Apellido</string>
    <string name="surname_2">Segundo Apellido</string>
    <string name="direction">Direccion</string>
    <string name="city">Ciudad</string>
    <string name="email">E-Mail</string>
    <string name="cd">Codigo Postal</string>
    <string name="phone">Telefono</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="pass">Password</string>
    <string name="firstButton">Go!</string>
    <string name="helperTextPassword">Esto es una contraseña</string>
    <string-array name="spinner_phone">
        <item>Fijo</item>
        <item>Movil</item>
    </string-array>
    <string name="descriptionText">DESCRIPTION</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="className">ClassName</string>
    <string name="classYear">ClassYear</string>
    <string name="classDescription">ClassDescription</string>
    <string name="communityDescription">CommunityDescription</string>
    <string name="communityTopic">CommunityTopic</string>
    <string name="communityCoordinator">CommunityCoordinator</string>
    <string name="communityTitle">CommunityTitle</string>
    <string name="professorDescription">ProfessorDescription</string>
    <string name="professorSurname">ProfessorSurname</string>
    <string name="professorName">ProfessorName</string>
    <string name="button">BUTTON</string>
    <string name="register">REGISTRO</string>
    <string name="username">userName</string>
    <string name="userSurname">userSurname</string>
    <string name="gender">GENDER</string>
    <string name="hobbies">Hobbies</string>
    <string name="eat">Eat</string>
    <string name="sleep">Sleep</string>
    <string name="walk">Walk</string>
    <string name="img">img</string>
    <string name="textView">TextView</string>
    <string name="apellidos">[apellidos]</string>
    <string name="mail">[email]</string>
</resources>