<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/classImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/img"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/className"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="120dp"
        android:text="@string/className" />

    <TextView
        android:id="@+id/classYear"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/className"
        android:layout_marginStart="120dp"
        android:text="@string/classYear" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/classImg"
        tools:openDrawer="start">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.DrawerLayout>

    <TextView
        android:id="@+id/descriptionTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="300dp"
        android:text="@string/descriptionText"/>
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:text="@string/classDescription"
        android:layout_below="@id/descriptionTitle" />

</RelativeLayout>