<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/utad" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/username"/>

                    <TextView
                        android:id="@+id/textViewS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/userSurname"/>

                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                app:errorEnabled="false">

                <EditText
                    android:id="@+id/txtDesc"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapSentences|textMultiLine|textCapWords|textPersonName"
                    android:hint="@string/descriptionText" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/gender"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="false">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_boys"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_female" />

                    <RadioButton
                        android:id="@+id/radio_girls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_male" />
                </RadioGroup>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/hobbies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/hobbies" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilHobbies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:helperTextEnabled="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">


                    <CheckBox
                        android:id="@+id/ch_cinema"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eat" />

                    <CheckBox
                        android:id="@+id/ch_walk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sleep" />

                    <CheckBox
                        android:id="@+id/ch_play_music"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/walk" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll"
        android:text="@string/firstButton"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>